# EcoRide

./: CMakeLists.txt  README.md  driverdashboard.cpp  driverdashboard.h  loginwindow.cpp  loginwindow.h  main.cpp  mainwindow.cpp  mainwindow.h  proposals.txt  riderdashboard.cpp  riderdashboard.h  rides.txt  widget.cpp
.qtcreator/: CMakeLists.txt.user.aaba95f
